--- a/viewer/css/style.css
+++ b/viewer/css/style.css
@@ -3,7 +3,8 @@
   margin: 0;
   padding: 0;
   outline: none;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, '游ゴシック体', YuGothic, 'Yu Gothic Medium', 'Noto Sans JP', sans-serif;
   color: inherit;
   font-size: inherit;
@@ -29,6 +30,7 @@ body {
       width: 100%;
       height: 16px;
       margin-top: 16px;
+      background: -webkit-gradient(linear, left top, right top, from(#ff645b), color-stop(25%, #ff645b), color-stop(0, #ffc73d), color-stop(50%, #ffc73d), color-stop(0, #54e470), color-stop(75%, #54e470), color-stop(0, #0fbbe7), to(#0fbbe7));
       background: linear-gradient(90deg, #ff645b, #ff645b 25%, #ffc73d 0, #ffc73d 50%, #54e470 0, #54e470 75%, #0fbbe7 0, #0fbbe7); }
     body #container h1 {
       margin-top: 16px;
@@ -44,7 +46,7 @@ body {
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
-      border: 1px solid #ccc;
+      border: 2px solid #ccc;
       border-radius: 20px;
       font-size: 16px;
       background-image: url(../img/icon-arrow-down.svg);
@@ -56,6 +58,11 @@ body {
         display: none; }
       body #container select:hover {
         cursor: pointer; }
+      body #container select:disabled {
+        background-color: #ddd; }
+    body #container span.separator {
+      color: #ddd;
+      width: 40px; }
     body #container #map-block {
       margin-top: 32px;
       background-color: #f3f3f3;
